# word-mcp-live

./: .dockerignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  PRIVACY.md  README.md  README.zh-CN.md  TOOLS.md  __init__.py  manifest.json  pyproject.toml  server.json  setup_mcp.py  test_formatting.py  word_mcp_server.py
office_word_mcp_server/: __init__.py
tests/: test_convert_to_pdf.py
word_document_server/: main.py
word_document_server/core/: __init__.py  com_timeout.py  document_protection.py  word_mac.py
word_document_server/tools/: __init__.py  content_tools.py  document_tools.py  live_tools.py  protection_tools.py
word_document_server/utils/: backup_manager.py  file_utils.py
word_mcp_live_cheemscheems/: main.py
word_mcp_live_cheemscheems/core/: __init__.py  auth.py  com_timeout.py  comment_writer.py  footnotes.py  tracked_changes.py  word_mac.py
word_mcp_live_cheemscheems/tools/: __init__.py  comment_tools.py  comment_write_tools.py  content_tools.py  document_tools.py  extended_document_tools.py  footnote_tools.py  format_tools.py  hyperlink_tools.py  layout_tools.py  live_layout_tools.py  live_read_tools.py  live_tools.py  protection_tools.py  screen_capture_tools.py  tracked_changes_tools.py
word_mcp_live_cheemscheems/utils/: __init__.py  backup_manager.py  extended_document_utils.py  file_utils.py  path_safety.py
